# Breakout

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Breakout/: CMakeLists.txt
Breakout/source/entry/: CMakeLists.txt
Breakout/source/entry/interface/: Application.hpp
Breakout/source/entry/source/: main.cpp
Breakout/source/entry/source/app/: Breakout.cpp  Breakout.hpp
Breakout/source/entry/source/sandbox/: Breakout.cpp  Breakout.hpp
Breakout/source/game/: CMakeLists.txt
Breakout/source/game/common/: GameData.cpp  GameData.hpp  Scoreboard.cpp  Scoreboard.hpp  ScreenDimensions.hpp
Breakout/source/game/objects/interface/: Drawable.hpp  Movable.hpp  Moveable.hpp
Breakout/source/game/objects/level/: Level.cpp  Level.hpp  LevelStack.hpp
Breakout/source/resource/: CMakeLists.txt
Breakout/source/resource/config/: Config.hpp  Widget.hpp
Breakout/source/resource/config/StateConfigs/: InputStateConfig.cpp  InputStateConfig.hpp  IntroStateConfig.cpp  IntroStateConfig.hpp
Breakout/source/resource/config/private/: Arrow.cpp  Arrow.hpp  StateDefinitions.cpp  StateDefinitions.hpp  Textbox.cpp  Textbox.hpp  WriteableTextbox.cpp  WriteableTextbox.hpp
Breakout/source/resource/main/: ResourceHolder.cpp  ResourceHolder.hpp
Breakout/source/resource/managers/: Manager.cpp  Manager.hpp
Breakout/source/state/: CMakeLists.txt
Breakout/source/state/interface/: State.hpp  StateMachine.hpp
Breakout/source/state/source/: StateFactory.hpp  StateMachine.cpp
Breakout/source/state/source/states/: EndState.cpp  EndState.hpp  GameState.cpp  GameState.hpp  InputState.cpp  InputState.hpp  IntroState.cpp  IntroState.hpp  MenuState.cpp  MenuState.hpp  ScoreboardState.cpp  ScoreboardState.hpp
Breakout/source/utils/: CMakeLists.txt
Breakout/source/utils/template/: Template.hpp
Dependencies/SFML/linux/include/SFML/Graphics/: Sprite.hpp  Text.hpp
Dependencies/SFML/linux/share/SFML/doc/html/: classsf_1_1Sprite.html  classsf_1_1Text.html
resource/xml/: .Textures.xml.swp  Font.xml  Sound.xml  Textures.xml
resource/xml/state/: StateConfig.xml  intro.xml
